Fix Popover Editor Spacing Issue

--- a/SCSS/ITS Theme/_Popover.scss
+++ b/SCSS/ITS Theme/_Popover.scss
@@ -31,7 +31,7 @@
 }
 
 /*Crop Image in Popover*/
-.popover.hover-popover img:not([alt=""]):not(.emoji):not(.link-favicon) {
+.popover.hover-popover img:not([alt=""]):not(.cm-widgetBuffer):not(.emoji):not(.link-favicon) {
     object-fit: cover;
     height: 200px;
     width: 100%;
