--- a/obsidian.css
+++ b/obsidian.css
@@ -3761,8 +3761,8 @@ input[type=range]::-webkit-slider-thumb {
 .cm-s-obsidian .CodeMirror-line,
 .cm-s-obsidian .cm-line,
 .markdown-preview-section {
-  font-variant-ligatures: none;
   text-rendering: optimizeLegibility;
+  font-variant-ligatures: none;
   font-family: var(--default-font);
   line-height: var(--lh);
   color: var(--text-normal);
@@ -4786,7 +4786,7 @@ iframe {
 }
 
 /*Crop Image in Popover*/
-.popover.hover-popover img:not([alt=""]):not(.emoji):not(.link-favicon) {
+.popover.hover-popover img:not([alt=""]):not(.cm-widgetBuffer):not(.emoji):not(.link-favicon) {
   object-fit: cover;
   height: 200px;
   width: 100%;
